--- a/way_to_busto.ipynb
+++ b/way_to_busto.ipynb
@@ -306,8 +306,10 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3c1b99a0",
-   "metadata": {},
+   "id": "2dcc5c94",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -617,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf10acff",
+   "id": "11c0e7b3",
    "metadata": {},
    "outputs": [],
    "source": []
